--- a/jsWhackAMole.css
+++ b/jsWhackAMole.css
@@ -10,6 +10,9 @@
   * - container
   * - div-container
   * - div-subcontainer
+  * - text-container
+  * - text-style
+  * - text-subcontainer
   *
   */
 /* // ***** ------------------------ **** ------------------------ ***** // */     
@@ -51,6 +54,32 @@
     height: 800px;
     position: relative;
     width: 800px;
+}
+
+#text-container {
+    position: fixed;
+    height: 50px;
+    width: 250px;
+}
+
+.text-style {
+    background: #bbcce8;
+    border: 1px solid #bbcce8;
+    color: rgb(14, 71, 163);
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    height: 49px;
+    text-align: center;
+    width: 249px;
+}
+
+#text-subcontainer {
+    background: #bbcce8;
+    border: 2.5px solid rgb(14, 71, 163);
+    display: inline-block;
+    height: 50px;
+    position: relative;
+    width: 250px;
 }
 
 /* // ***** ------------------------ **** ------------------------ ***** // */  
