Addition of form popup message

--- a/gamepage.css
+++ b/gamepage.css
@@ -10,6 +10,9 @@
   * - container
   * - div-container
   * - div-subcontainer
+  * - form-box
+  * - form-popup
+  * - message
   * - text-container
   * - text-style
   * - text-subcontainer
@@ -54,6 +57,38 @@
     height: 800px;
     position: relative;
     width: 800px;
+}
+
+.form-box {
+    background-color: #bbcce8;
+    border: 2.5px solid rgb(14, 71, 163);
+    display: inline-block;
+    height: 250px;
+    position: relative;
+    top: 30%;
+    text-align: center;
+    width: 500px;
+}
+
+.form-popup {
+    background-color: rgba(0, 0 ,0 , 0.4);
+    display: none;
+    height: 100%;
+    left: 0;
+    overflow: auto;
+    position: fixed;
+    top: 0%;
+    width: 100%;
+    z-index: 1;
+}
+
+#message {
+    color: rgb(14, 71, 163); 
+    font-family: Arial, Helvetica, sans-serif; 
+    font-size: 50px; 
+    position: relative;
+    top: 15%; 
+    text-align: center;
 }
 
 #text-container {
