--- a/index.css
+++ b/index.css
@@ -4,6 +4,7 @@
   *
   * Index
   *
+  * - animated-mole
   * - body, html
   * - button-base
   * - button-graphics
@@ -13,6 +14,11 @@
   * - matt-fung
   */
 /* // ***** ------------------------ **** ------------------------ ***** // */     
+
+.animated-mole {
+    left: 0px;
+    position: absolute;
+}
 
 body,html {
     min-width: 1130px;
@@ -49,9 +55,10 @@ body,html {
 
 .div-mole-animation {
     display: inline-block;
-    height: 200px;
+    height: 160px;
+    margin-top: 20px;
     position: relative;
-    width: 200px;
+    width: 160px;
 }
 
 #matt-fung {
