--- a/gamepage.css
+++ b/gamepage.css
@@ -77,14 +77,17 @@ body, html {
     width: 800px;
 }
 
-.form-box {
+.form {
     background-color: #bbcce8;
     border: 2.5px solid rgb(14, 71, 163);
     display: inline-block;
-    height: 250px;
     position: relative;
-    top: 30%;
     text-align: center;
+    top: 30%;
+}
+
+.form-box {
+    height: 250px;
     width: 500px;
 }
 
@@ -114,8 +117,8 @@ body, html {
     font-family: Arial, Helvetica, sans-serif; 
     font-size: 50px; 
     position: relative;
-    top: 15%; 
     text-align: center;
+    top: 15%; 
 }
 
 #text-container {
